Added full functionality to create reservations from ui, publish ReservationCreatedEvent, and update vehicle status